--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1273,6 +1273,20 @@ spec:
               description: Desired configuration of Eclipse Che installation.
               properties:
                 components:
+                  default:
+                    cheServer:
+                      debug: false
+                      logLevel: INFO
+                    database:
+                      credentialsSecretName: postgres-credentials
+                      externalDb: false
+                      postgresDb: dbche
+                      postgresHostName: postgres
+                      postgresPort: "5432"
+                      pvc:
+                        claimSize: 1Gi
+                    metrics:
+                      enable: true
                   description: Che components configuration.
                   properties:
                     cheServer:
@@ -1314,6 +1328,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1460,6 +1478,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1576,6 +1598,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1708,6 +1734,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1803,6 +1833,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1968,6 +2002,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -2072,6 +2110,11 @@ spec:
                       type: string
                   type: object
                 devEnvironments:
+                  default:
+                    defaultNamespace:
+                      template: <username>-che
+                    storage:
+                      pvcStrategy: common
                   description: Development environment default configuration options.
                   properties:
                     defaultNamespace:
@@ -2194,6 +2237,12 @@ spec:
                       type: object
                   type: object
                 networking:
+                  default:
+                    auth:
+                      gateway:
+                        configLabels:
+                          app: che
+                          component: che-gateway-config
                   description: Networking, Che authentication, and TLS configuration.
                   properties:
                     annotations:
@@ -2248,6 +2297,10 @@ spec:
                                         description: Image pull policy. Default value
                                           is `Always` for `nightly`, `next` or `latest`
                                           images, and `IfNotPresent` in other cases.
+                                        enum:
+                                          - Always
+                                          - IfNotPresent
+                                          - Never
                                         type: string
                                       name:
                                         description: Container name.
