--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -789,6 +789,20 @@ spec:
             description: Desired configuration of Eclipse Che installation.
             properties:
               components:
+                default:
+                  cheServer:
+                    debug: false
+                    logLevel: INFO
+                  database:
+                    credentialsSecretName: postgres-credentials
+                    externalDb: false
+                    postgresDb: dbche
+                    postgresHostName: postgres
+                    postgresPort: "5432"
+                    pvc:
+                      claimSize: 1Gi
+                  metrics:
+                    enable: true
                 description: Che components configuration.
                 properties:
                   cheServer:
@@ -819,6 +833,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -922,6 +940,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1020,6 +1042,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1124,6 +1150,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1203,6 +1233,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1339,6 +1373,10 @@ spec:
                                   type: string
                                 imagePullPolicy:
                                   description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1424,6 +1462,11 @@ spec:
                     type: string
                 type: object
               devEnvironments:
+                default:
+                  defaultNamespace:
+                    template: <username>-che
+                  storage:
+                    pvcStrategy: common
                 description: Development environment default configuration options.
                 properties:
                   defaultNamespace:
@@ -1511,6 +1554,12 @@ spec:
                     type: object
                 type: object
               networking:
+                default:
+                  auth:
+                    gateway:
+                      configLabels:
+                        app: che
+                        component: che-gateway-config
                 description: Networking, Che authentication, and TLS configuration.
                 properties:
                   annotations:
@@ -1554,6 +1603,10 @@ spec:
                                       type: string
                                     imagePullPolicy:
                                       description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                      enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                       type: string
                                     name:
                                       description: Container name.
