--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5311,6 +5311,16 @@ spec:
                           resource used to set up identity federation on the OpenShift
                           side.
                         type: string
+                      oauthProxyExtraProperties:
+                        additionalProperties:
+                          type: string
+                        description: A map of environment variables in addition to
+                          the configuration file settings in `che-gateway-config-oauth-proxy`
+                          ConfigMap to configure `oauth-proxy`. If the `oauthProxyExtraProperties`
+                          field contains a property normally configured in `che-gateway-config-oauth-proxy`
+                          ConfigMap, the value defined in the `oauthProxyExtraProperties`
+                          is used instead. For details, see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview/
+                        type: object
                     type: object
                   domain:
                     description: 'For an OpenShift cluster, the Operator uses the
